# personal-dashboard-tui

./: .gitignore  README.md  pyproject.toml
src/dashboard_tui/: __init__.py  app.py  main.py  styles.tcss  theme.tcss
src/dashboard_tui/config/: settings.py
src/dashboard_tui/core/: backup.py  paths.py
src/dashboard_tui/widgets/: __init__.py  base.py  clock.py  file_list.py  github.py  notes.py  registry.py  school.py  system.py  todo.py
