[project]
name = "dashboard-tui"
version = "0.1.0"
description = "Personal terminal dashboard starter built with Textual"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.61.0",
  "rich>=13.7.0",
  "psutil>=5.9.0",
  "requests>=2.31.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
dashboard-tui = "dashboard_tui.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
